--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
   </head>
   <body>
     <p>pierwszy commit</p>
+    <ol>
+      <li>
+        <p>odliczanie 1</p>
+      </li>
+      <li>
+        <p>odliczanie 2</p>
+      </li>
+      <li>
+        <p>odliczanie 3</p>
+      </li>
+      <li>
+        <p>odliczanie 4</p>
+      </li>
+      <li>
+        <p>odliczanie 5</p>
+      </li>
+    </ol>
   </body>
 </html>
